--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.12"
   }
 }
